# GIIS-2024

./: .gitignore  CMakeLists.txt  README.md  pbs.md  sonar-project.properties
.github/: pr-title-checker-config.json
.github/workflows/: build-cmake.yml  build.yml  check_branch_name.yml  check_duplication.yml  mark_lab.yml  pr-title-checker.yml  run-python.yml
tasks/task_01/: readme.md
tasks/task_03/: index.html
tasks/task_03/css/: templatemo-style.css
trunk/II02205/task_01/: readme.md
trunk/II02205/task_01/src/: CMakeLists.txt  main.py
trunk/II02205/task_02/src/: CMakeLists.txt  adress_book.py  main.py  window.py
trunk/II2208/task_01/doc/: readme.md
trunk/II2208/task_01/src/: CMakeList.txt  main.py  task01.cpp
trunk/II2208/task_02/doc/: readme.md
trunk/II2208/task_02/src/: CMakeLists.txt  main.py
trunk/ii002203/task_01/: readme.md
trunk/ii002203/task_01/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
trunk/ii002203/task_02/: readme.md
trunk/ii002203/task_02/src/: CMakeLists.txt  addressbook.cpp  addressbook.h  addressbook.ui  main.cpp
trunk/ii002203/task_03/: readme.md
trunk/ii002203/task_03/src/: avia.html  hotel.html  language.html  support.html
trunk/ii002203/task_04/: readme.md
trunk/ii002203/task_04/src/: Bet.py  MainWindow.py  casino.ui  main.py  requirements.txt
trunk/ii002203/task_06/: readme.md
trunk/ii0216/task_01/doc/: readme.md
trunk/ii0216/task_01/src/: main.py
trunk/ii02201/task_01/: README.md  Report.md
trunk/ii02201/task_01/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
trunk/ii02201/task_02/: README.md
trunk/ii02201/task_02/src/: CMakeLists.txt  addressbook.cpp  addressbook.h  addressbook.ui  finddialog.cpp  finddialog.h  main.cpp
trunk/ii02201/task_03/src/: index.html  pay.html  styles.css  styles_pay.css
trunk/ii02201/task_04/: README.md
trunk/ii02201/task_04/src/: find.html  index.html  main.py  styles_find.css
trunk/ii02201/task_06/: README.md
trunk/ii02201/task_06/src/: ascii.py  pixel.py  requirements.txt
trunk/ii02202/task_02/: README.md
trunk/ii02202/task_02/src/: main.py
trunk/ii02202/task_04/: readme.md
trunk/ii02202/task_04/src/: main.py
trunk/ii02204/task_01/: readme.md
trunk/ii02204/task_01/src/: functions.py  main.py
trunk/ii02204/task_02/: readme.md
trunk/ii02204/task_02/src/: main.py
trunk/ii02204/task_04/: readme.md
trunk/ii02204/task_04/src/: game.py
trunk/ii02204/task_06/: readme.md
trunk/ii02204/task_07/: readme.md
trunk/ii02204/task_07/src/: fish.stl  main.py  result.stl
trunk/ii02205/task_01/: readme.md
trunk/ii02205/task_02/: readme.md
trunk/ii02205/task_02/src/: adress_book.py  main.py  requirements.txt  window.py
trunk/ii02205/task_03/: readme.md
trunk/ii02205/task_03/src/: friends_page.dart  home_page.dart  main.dart  messages_page.dart  pubspec.yaml
trunk/ii02205/task_04/: readme.md
trunk/ii02205/task_04/src/: application.py  main.py  moving.py  requirements.txt
trunk/ii02205/task_06/: readme.md
trunk/ii02205/task_06/src/: animation.py  main.py  requirements.txt  test.py  еуые1.py
trunk/ii02205/task_07/: readme.md
trunk/ii02205/task_07/src/: Diplodocus.stl  main.py  requirements.txt
trunk/ii02206/task_01/: readme.md
trunk/ii02206/task_01/src/: MyLogic.py  graphic.py  imgui.ini
trunk/ii02206/task_06/: readme.md
trunk/ii02206/task_45/: readme.md
trunk/ii02206/task_45/src/: main.py  records.txt
trunk/ii02207/task_01/src/: pom.xml
trunk/ii02207/task_02/: README.md
trunk/ii02207/task_02/src/: GIIS_lab2.py  main.py
trunk/ii02207/task_04/: README.md
trunk/ii02207/task_04/src/: main.py
trunk/ii02207/task_06/: README.md
trunk/ii02207/task_06/src/: main.py
trunk/ii02208/task_01/: readme.md
trunk/ii02208/task_01/doc/: readme.md
trunk/ii02208/task_01/src/: CMakeLists.txt  main.py  requirements.txt
trunk/ii02208/task_02/: readme.md
trunk/ii02208/task_02/src/: main.py  requirements.txt
trunk/ii02208/task_03/: readme.md
trunk/ii02208/task_03/src/: package-lock.json  package.json
trunk/ii02208/task_04/: readme.md
trunk/ii02208/task_04/src/: package-lock.json  package.json
trunk/ii02208/task_05/: readme.md
trunk/ii02208/task_05/src/: index.html
trunk/ii02208/task_06/: readme.md
trunk/ii02208/task_06/src/: delaunay.py  load.py  main.py
trunk/ii02209/task_01/doc/: readme.md
trunk/ii02209/task_01/src/: functions.py  main.py
trunk/ii02209/task_02/doc/: readme.md
trunk/ii02209/task_03/doc/: readme.md
trunk/ii02210/task_01/: readme.md
trunk/ii02210/task_01/src/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
trunk/ii02210/task_02/: readme.md
trunk/ii02210/task_03/: readme.md
trunk/ii02210/task_04/: readme.md
trunk/ii02210/task_04/src/: App.xaml  App.xaml.cs  Block.cs  BlockQueue.cs  CMakeLists.txt  GameGrid.cs  GameState.cs  IBlock.cs  JBlock.cs  LBlock.cs  MainWindow.xaml  MainWindow.xaml.cs  OBlock.cs  Position.cs  SBlock.cs  TBlock.cs  ZBlock.cs  tetris_.csproj
trunk/ii02210/task_06/: readme.md
trunk/ii02210/task_07/: readme.md
trunk/ii02211/: readme.txt
trunk/ii02211/src/: test.py
trunk/ii02211/task_01/: readme.md
trunk/ii02211/task_02/: readme.md
trunk/ii02211/task_04-05/: readme.md
trunk/ii02211/task_06/: readme.md
trunk/ii02212/task_01/: README.md
trunk/ii02212/task_02/: README.md
trunk/ii02214/task_02/: readme.md
trunk/ii02214/task_04/: readme.md
trunk/ii02215/task_02/: README.md
trunk/ii02215/task_04/: readme.md
trunk/ii02216/task_01/: readme.md
trunk/ii02216/task_01/src/: CMakeLists.txt  main.py  requirements.txt
trunk/ii02216/task_02/: readme.md
trunk/ii02216/task_03/: readme.md
trunk/ii02216/task_04/: readme.md
trunk/ii02216/task_06/: readme.md
trunk/ii02217/task_01/: README.md
trunk/ii02217/task_02/: README.md
trunk/ii02218/task_04/: README.md
trunk/ii02219/task_01/: readme.md
trunk/ii02219/task_02/: README.md
trunk/ii02219/task_03/: index.html  readme.md
trunk/ii02219/task_04/: readme.md
trunk/ii02219/task_06/: readme.md
(+162 files in other folders)
