cmake_minimum_required (VERSION 3.15)
project (GIIS) 

option(PY_LANGUAGE OFF)
option(CXX_LANGUAGE OFF)

if(PY_LANGUAGE)
file(GLOB python_dirs RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "trunk/ii0*/*/src/*.py")
file(WRITE python_path.txt "")
foreach(py_dir ${python_dirs})
	string(REPLACE "/main.py" "" PY_PATH ${py_dir}) 
		file(APPEND python_path.txt "${PY_PATH}\n")	
endforeach()
endif()

if(CXX_LANGUAGE)
file(GLOB V_GLOB RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "trunk/ii0*/*/src/")
foreach(item ${V_GLOB})	
	message( "Find \"${item}\"" )
	add_subdirectory(${item})
endforeach()
endif()
